# demo-java-and-rust

./: .gitignore  Cargo.toml  README.md  build.gradle  settings.gradle
src/: java_api.rs  lib.rs
src/benchmarks/java/me/mpg/: AbstractBenchmark.java  JsonParseAndSumBenchmark.java
src/main/java/me/mpg/: Data.java  JavaAfterburnerExecute.java  JavaExecute.java  JsonHelper.java  Message.java  Native.java  me_mpg_Native.h
src/test/java/me/mpg/: BaseTest.java  JavaExecuteTest.java  NativeTest.java
