[package]
name = "execute"
version = "0.1.0"
authors = ["Marshall Glanzer <mglanzer@grubhub.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.17.0"
serde = { version = "1.0", features = ["derive"] }

# serde_json is just for the example, not required in general
serde_json = "1.0"

[lib]
crate_type = ["cdylib"]
